# project1_provorova_sasha_dpo

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
