[tool.poetry]
name = "project1_provorova_sasha_dpo"
version = "0.1.0"
description = "Console text adventure game: Treasure Labyrinth"
authors = ["Aleksandra Provorova <sashaprovora@gmail.com>"]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []